@@ -1,6 +1,8 @@
 Revision history for App-Pocoirc
 
 {{$NEXT}}
+    - Rely on POE::Component::IRC 6.50's shutdown code instead of handling it
+      ourselves
 
 0.32  Sun Oct 31 17:47:21 GMT 2010
     - Redirect STDOUT/STDERR to the log file (if any) when daemonized
